@startuml
set namespaceSeparator none
hide method

namespace taxi.service.domain {

    class company {
        - id : Integer
        - name : String
        - addres : String
        - phone : String
    }

    class user {
        - id : Integer
        - name : String
        - lastname: String
        - email : String
        - state : Boolean
        - createDate : Date
        - companyId : Integer
        - rol : String
    }


    class truck {
        - id : Integer
        - plate : String
        - model : String
        - state : Boolean
        - socioUsuarioId : Integer
    }

    class client {
        - id : Integer
        - name : String
        - phone : String
        - email : String
        - createdAt : Date
    }

    class contract {
        - id : Integer
        - clientId : Integer
        - fecha : Date
        - total : BigDecimal
    }

    class contracttruck {
        - id : Integer
        - facturaId : Integer
        - taxiId : Integer
    }

    class Viaje {
        - id : Integer
        - facturaTaxiId : Integer
        - origen : String
        - destino : String
        - fecha : Date
        - costo : BigDecimal
    }

    user *-- company

    truck *-- user





    contract *-- client


    contracttruck *-- contract
    contracttruck *-- truck

    Viaje *-- contracttruck
}

@enduml
